Rapid Prd/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Deal Registration Process</fullName>
        <description>Partner registration process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Calling - No Contact Made</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Duplicate - Lead</fullName>
        </values>
        <values>
            <fullName>Fraud</fullName>
        </values>
        <values>
            <fullName>In Progress - Awaiting Statements</fullName>
        </values>
        <values>
            <fullName>In Progress - Follow Up Call Needed</fullName>
        </values>
        <values>
            <fullName>In Progress - Pending Approval</fullName>
        </values>
        <values>
            <fullName>In Progress - Pending Quote</fullName>
        </values>
        <values>
            <fullName>Initial Call Needed</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Lost - Incomplete Information</fullName>
        </values>
        <values>
            <fullName>Lost - Language Barrier</fullName>
        </values>
        <values>
            <fullName>Not Interested - Do Not Contact</fullName>
        </values>
        <values>
            <fullName>Not Interested - Follow Up Later</fullName>
        </values>
        <values>
            <fullName>Not Legitimate</fullName>
        </values>
        <values>
            <fullName>Requested Information Only</fullName>
        </values>
        <values>
            <fullName>Second Voice Needed</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Partner Registration Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Calling - No Contact Made</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Denied</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Duplicate - Lead</fullName>
        </values>
        <values>
            <fullName>In Progress - Contract Sent</fullName>
        </values>
        <values>
            <fullName>In Progress - Follow Up Call Needed</fullName>
        </values>
        <values>
            <fullName>Initial Call Needed</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Legitimate</fullName>
        </values>
        <values>
            <fullName>Uninterested%2FRequested Information</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Web To Lead</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>Calling - No Contact Made</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Duplicate - Lead</fullName>
        </values>
        <values>
            <fullName>In Progress - Awaiting Statements</fullName>
        </values>
        <values>
            <fullName>In Progress - Follow Up Call Needed</fullName>
        </values>
        <values>
            <fullName>In Progress - Pending Approval</fullName>
        </values>
        <values>
            <fullName>Initial Call Needed</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Lost - Incomplete Information</fullName>
        </values>
        <values>
            <fullName>Lost - Language Barrier</fullName>
        </values>
        <values>
            <fullName>Not Interested - Do Not Contact</fullName>
        </values>
        <values>
            <fullName>Not Interested - Follow Up Later</fullName>
        </values>
        <values>
            <fullName>Requested Information Only</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ASAP_Flag_New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASAP Flag New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASAP_Flag__c</fullName>
        <formula>IF( 	AND(DATEVALUE(CreatedDate) = Today(), 
	AND((ISPICKVAL( Status , &quot;Initial Call Needed&quot;)), Five9_Call_Counter__c = 0)), 
	 TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASAP Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accepts_Credit_Cards__c</fullName>
        <label>Accepts Credit Cards?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accepts_Invoices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepts Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accepts_Medical_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepts Medical Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accounts_Receivable_Amount__c</fullName>
        <label>Accounts Receivable Amount</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounts_Receivable__c</fullName>
        <label>Accounts receivable amount?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advance_Amount_Requested__c</fullName>
        <label>Advance Amount Requested</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocation_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Allocation Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Requested__c</fullName>
        <label>Amount Requested</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_you_a_direct_lender__c</fullName>
        <label>Are you a direct lender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assign_to_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign to Director</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>BD - Extended</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>BD Profile</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_dollar_amount_funded__c</fullName>
        <description>Label change from Average dollar amount funded per month? to Dollar amount funded per month 02/21/17</description>
        <label>Dollar amount funded per month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Awaiting_CC_Flag__c</fullName>
        <formula>if(  ISPICKVAL(Status, &quot;Awaiting Credit Card Statements&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awaiting CC Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BA_Unqualified_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BOBA Unqualified Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BD_Round_Robin__c</fullName>
        <formula>MOD(VALUE(Lead_Number__c) ,2) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BD Round Robin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Best_Time_to_Call__c</fullName>
        <label>Best Time to Call?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Eligible_Date__c</fullName>
        <formula>IF(ISPICKVAL(Status, &apos;Unqualified&apos;) &amp;&amp;   ISPICKVAL(Unqualified_Reason__c, &apos;Start Up Business&apos;)  &amp;&amp; NOT(ISBLANK(DateBusinessStarted__c)) ,  DateBusinessStarted__c   + 365, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Eligible Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Email_Address__c</fullName>
        <label>Business Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Open_Tax_Lien_Amount__c</fullName>
        <label>Business Open Tax Lien Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Open_Tax_Lien_Payment_Plan__c</fullName>
        <label>Business Open Tax Lien Payment Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Structure__c</fullName>
        <label>Business Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C-Corporation</fullName>
                </value>
                <value>
                    <fullName>General Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>Proprietorship</fullName>
                </value>
                <value>
                    <fullName>S-Corporation</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_model__c</fullName>
        <label>Business model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business-to-business</fullName>
                </value>
                <value>
                    <fullName>Business-to-consumer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CALC_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://calc.rapidadvance.com/lead/salesforcelead?id=&quot;&amp; CASESAFEID(Id),Id)</formula>
        <label>CALC Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Lenders_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CA Lenders License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CI_Score__c</fullName>
        <label>CI Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Counter_Score__c</fullName>
        <formula>IF( Five9_Call_Counter__c &gt; 10, 10,
IF( Five9_Call_Counter__c &gt; 8, 30,
IF( Five9_Call_Counter__c &gt; 5, 40,
IF( Five9_Call_Counter__c &gt;= 3, 50,60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Counter Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Recording_Disclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Recording Disclosure?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Name_Upload__c</fullName>
        <label>Campaign Name Upload</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <description>Stores the Name of the Campaign the lead belong to</description>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Names__c</fullName>
        <description>This field is being used to identify Swift partners who are submitting leads.</description>
        <inlineHelpText>Swift partner campaign names.</inlineHelpText>
        <label>Campaign Names</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Artisans&apos; Bank</fullName>
                </value>
                <value>
                    <fullName>Dover Commercial Lending</fullName>
                </value>
                <value>
                    <fullName>Swift Test Campaign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Score__c</fullName>
        <formula>IF( AND(ISPICKVAL(LeadSource,&quot;Lead Generation&quot;), CONTAINS(Campaign_Name__c,&quot;Business.com&quot;)), 14400, 
IF( AND(ISPICKVAL(LeadSource,&quot;Lead Generation&quot;), CONTAINS(Campaign_Name__c,&quot;LendingTree&quot;)), 14400, 
IF( AND(ISPICKVAL(LeadSource,&quot;Lead Generation&quot;), CONTAINS(Campaign_Name__c,&quot;Buyerzone&quot;)), 14400, 
IF( AND(ISPICKVAL(LeadSource,&quot;Lead Generation&quot;), CONTAINS(Campaign_Name__c,&quot;MVF&quot;)), 14400, 
IF( AND(ISPICKVAL(LeadSource,&quot;Lead Generation&quot;), CONTAINS(Campaign_Name__c,&quot;Leads2results&quot;)), 14400, 
IF( ISPICKVAL(LeadSource,&quot;Lead Generation&quot;), 12400, 
IF( ISPICKVAL(LeadSource,&quot;TV-Call-In&quot;), 11400, 
IF( ISPICKVAL(LeadSource,&quot;Web-Call-In&quot;), 11400, 
IF( ISPICKVAL(LeadSource,&quot;Web-To-Lead&quot;), 11400,
IF( ISPICKVAL(LeadSource,&quot;Customer Journey V2&quot;), 13400, 
IF( ISPICKVAL(LeadSource,&quot;Customer Journey Web to Lead&quot;), 13400,1000
)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Tier_1__c</fullName>
        <formula>IF(OR( 
Contains(Campaign_Name__c,&quot;Access Commercial&quot;),Contains(Campaign_Name__c,&quot;Accountable Capital&quot;),Contains(Campaign_Name__c,&quot;Advancepoint&quot;), 
Contains(Campaign_Name__c,&quot;Advantage Commercial&quot;),Contains(Campaign_Name__c,&quot;Balboa Capital&quot;),Contains(Campaign_Name__c,&quot;Bizbrella&quot;), 
Contains(Campaign_Name__c,&quot;CNC Rich&quot;),Contains(Campaign_Name__c,&quot;Diamond Lending&quot;),Contains(Campaign_Name__c,&quot;Dimension Funding&quot;), 
Contains(Campaign_Name__c,&quot;Direct Connect&quot;),Contains(Campaign_Name__c,&quot;Elite Data&quot;),Contains(Campaign_Name__c,&quot;English RS&quot;), 
Contains(Campaign_Name__c,&quot;Essex Funding&quot;),Contains(Campaign_Name__c,&quot;Financial Advantage&quot;),Contains(Campaign_Name__c,&quot;Fortune Funding&quot;),
Contains(Campaign_Name__c,&quot;Global Real Estate&quot;),Contains(Campaign_Name__c,&quot;Goldbranch&quot;),Contains(Campaign_Name__c,&quot;Infinity Capital&quot;),
Contains(Campaign_Name__c,&quot;Kingswood&quot;),Contains(Campaign_Name__c,&quot;Lenders Box&quot;),Contains(Campaign_Name__c,&quot;No distractions&quot;),
Contains(Campaign_Name__c,&quot;Old Union&quot;),Contains(Campaign_Name__c,&quot;OnPoint&quot;),Contains(Campaign_Name__c,&quot;Posxpert&quot;),
Contains(Campaign_Name__c,&quot;SCC&quot;),Contains(Campaign_Name__c,&quot;Secure Money&quot;),Contains(Campaign_Name__c,&quot;Stacy McPhillip&quot;),
Contains(Campaign_Name__c,&quot;Straighline&quot;),Contains(Campaign_Name__c,&quot;The American Lender&quot;),Contains(Campaign_Name__c,&quot;Triumph Business&quot;),
Contains(Campaign_Name__c,&quot;United Capital&quot;),Contains(Campaign_Name__c,&quot;United Cash&quot;),
Contains(Campaign_Name__c,&quot;Currency Capital&quot;),Contains(Campaign_Name__c,&quot;Kennedy Funding&quot;),
Contains(Campaign_Name__c,&quot;Provider Network Direct&quot;),Contains(Campaign_Name__c,&quot;Citizens Business Finance&quot;),
Contains(Campaign_Name__c,&quot;Straightline Source&quot;), Contains(Campaign_Name__c,&quot;Merchant Resource&quot;),
Contains(Campaign_Name__c,&quot;Synergy Business&quot;),Contains(Campaign_Name__c,&quot;AdvancePoint&quot;),
Contains(Campaign_Name__c,&quot;Fundamental Capital&quot;),Contains(Campaign_Name__c,&quot;One Source&quot;),
Contains(Campaign_Name__c,&quot;Globelend Capital&quot;),Contains(Campaign_Name__c,&quot;Fast Capital&quot;),
Contains(Campaign_Name__c,&quot;Global Funding&quot;), Contains(Campaign_Name__c,&quot;Premium Merchant&quot;),
Contains(Campaign_Name__c,&quot;Main Street Finance&quot;),Contains(Campaign_Name__c,&quot;Crestwood&quot;),
Contains(Campaign_Name__c,&quot;TwinFold&quot;),Contains(Campaign_Name__c,&quot;Shore&quot;),
Contains(Campaign_Name__c,&quot;NPC 1080-&quot;),Contains(Campaign_Name__c,&quot;MTKT&quot;),
Contains(Campaign_Name__c,&quot;Nudelman Inc.&quot;),Contains(Campaign_Name__c,&quot;Eagle Ikon&quot;),
Contains(Campaign_Name__c,&quot;Go Accredited&quot;), Contains(Campaign_Name__c,&quot;Fortified Funding&quot;),
Contains(Campaign_Name__c,&quot;FRN Ventures&quot;),Contains(Campaign_Name__c,&quot;Excel Capital&quot;),
Contains(Campaign_Name__c,&quot;BF Advance&quot;),Contains(Campaign_Name__c,&quot;Duke&quot;),
Contains(Campaign_Name__c,&quot;WBL&quot;),Contains(Campaign_Name__c,&quot;World Trade&quot;)
),1,3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign_Tier_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Tier_2__c</fullName>
        <formula>IF(OR( 
Contains(Campaign_Name__c,&quot;1stcapitalsource&quot;),Contains(Campaign_Name__c,&quot;AFG&quot;),
Contains(Campaign_Name__c,&quot;Allied Capital&quot;),Contains(Campaign_Name__c,&quot;Barrett Mitchell&quot;),
Contains(Campaign_Name__c,&quot;Big Foot&quot;),Contains(Campaign_Name__c,&quot;BizLender&quot;),
Contains(Campaign_Name__c,&quot;CapitalFront&quot;),Contains(Campaign_Name__c,&quot;Chicago National&quot;),
Contains(Campaign_Name__c,&quot;Ekeanyanwu&quot;),
Contains(Campaign_Name__c,&quot;Excalibur Medical&quot;),
Contains(Campaign_Name__c,&quot;Fundera&quot;),Contains(Campaign_Name__c,&quot;Instafund&quot;),
Contains(Campaign_Name__c,&quot;Jamaar Manlove&quot;),Contains(Campaign_Name__c,&quot;JLAP&quot;),
Contains(Campaign_Name__c,&quot;John Maciejko&quot;),
Contains(Campaign_Name__c,&quot;Liberty Capital&quot;),
Contains(Campaign_Name__c,&quot;RBS Engineers&quot;),
Contains(Campaign_Name__c,&quot;S.A.M.D.&quot;),
Contains(Campaign_Name__c,&quot;Smartcard&quot;),Contains(Campaign_Name__c,&quot;SMS Ventures&quot;),
Contains(Campaign_Name__c,&quot;We Lend You&quot;),
Contains(Campaign_Name__c,&quot;Alantes&quot;),
Contains(Campaign_Name__c,&quot;Wesley Daguiar&quot;),Contains(Campaign_Name__c,&quot;Nationwide Capital&quot;),
Contains(Campaign_Name__c,&quot;Kingswood&quot;),Contains(Campaign_Name__c,&quot;Thai&apos;s&quot;),
Contains(Campaign_Name__c,&quot;Lendio - Pricing Partner&quot;),
Contains(Campaign_Name__c,&quot;Dash Funding Source&quot;),
Contains(Campaign_Name__c,&quot;Merchant Solutions, LLC&quot;),
Contains(Campaign_Name__c,&quot;123 Fund&quot;),Contains(Campaign_Name__c,&quot;ProMed Partner Campaign&quot;),
Contains(Campaign_Name__c,&quot;Harbour Capital&quot;),
Contains(Campaign_Name__c,&quot;Imperial Advance&quot;),
Contains(Campaign_Name__c,&quot;Money Works D&quot;),
Contains(Campaign_Name__c,&quot;Yellowstone&quot;),
Contains(Campaign_Name__c,&quot;Universal Merchant Solutions&quot;),
Contains(Campaign_Name__c,&quot;iPayment&quot;),Contains(Campaign_Name__c,&quot;Marketing360&quot;),Contains(Campaign_Name__c,&quot;Mainstream&quot;),
Contains(Campaign_Name__c,&quot;The ISO Recruiting Company&quot;)),2,3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign_Tier_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Tier_4__c</fullName>
        <formula>IF(OR( 
Contains(Campaign_Name__c,&quot;Argus&quot;),Contains(Campaign_Name__c,&quot;Coconut&quot;),Contains(Campaign_Name__c,&quot;EZ Business&quot;)),4,3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign_Tier_4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Agent/MLS-US</fullName>
                </value>
                <value>
                    <fullName>Asset Based Lending</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Banks</fullName>
                </value>
                <value>
                    <fullName>Broker/Intermediary</fullName>
                </value>
                <value>
                    <fullName>Cash Brokers</fullName>
                </value>
                <value>
                    <fullName>Commercial Real Estate</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Credit Card Processors</fullName>
                </value>
                <value>
                    <fullName>Credit Unions</fullName>
                </value>
                <value>
                    <fullName>CUSO</fullName>
                </value>
                <value>
                    <fullName>Economic Development</fullName>
                </value>
                <value>
                    <fullName>Equipment Leasing</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>Factoring</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>Government Contractor</fullName>
                </value>
                <value>
                    <fullName>High Quality Originator</fullName>
                </value>
                <value>
                    <fullName>High Volume Originator</fullName>
                </value>
                <value>
                    <fullName>Inventory Fianncing</fullName>
                </value>
                <value>
                    <fullName>ISO/MSP-CANADA</fullName>
                </value>
                <value>
                    <fullName>ISO/MSP-US</fullName>
                </value>
                <value>
                    <fullName>Lead Generator</fullName>
                </value>
                <value>
                    <fullName>Networking/COI</fullName>
                </value>
                <value>
                    <fullName>Purchase Order Finance</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>Strategic Partnerships</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chat_Agent__c</fullName>
        <description>Captures the Name of the Chat Agent on Live Help Now</description>
        <label>Chat Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColdCall_Lead_Ass__c</fullName>
        <formula>if( MOD( VALUE(Lead_Number__c) ,2) =0,1,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ColdCall Lead Ass</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collateral_Available__c</fullName>
        <label>Collateral Available</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_corp_ID__c</fullName>
        <label>Company corp ID</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Advance_Company__c</fullName>
        <label>Competitor Advance Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_balance_amount__c</fullName>
        <label>Competitor balance amount?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitors_they_work__c</fullName>
        <description>Label change from &quot;Competitors they work with currently?&quot; to &quot;Competitors you work with currently&quot; 02/21/17</description>
        <label>Competitors you work with currently</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Sent_Date__c</fullName>
        <label>Contract Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Email__c</fullName>
        <label>Copy Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Copy_Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp;  LastName</formula>
        <label>Copy Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correct_Address__c</fullName>
        <description>Captures the validity of the Address</description>
        <label>Correct Address?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Did Not Verify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_Company_Name__c</fullName>
        <description>Captures the validity of the Company Name</description>
        <label>Correct Company Name?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Did Not Verify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_Contact_Name__c</fullName>
        <description>Captures the validity of the Contact Name</description>
        <label>Correct Contact Name?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Did Not Verify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_Phone_Number__c</fullName>
        <description>Captures the validity of the Phone Number</description>
        <label>Correct Phone Number?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Did Not Verify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Date_Factor__c</fullName>
        <formula>IF( (Now() -  CreatedDate)&lt;1,60,
IF( (Now() -  CreatedDate)&lt;3,50,
IF( (Now() -  CreatedDate)&lt;6,40,
IF( (Now() -  CreatedDate)&lt;8,20,10))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Date Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Cards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Cards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Processor__c</fullName>
        <label>Current Processor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Fax_Email__c</fullName>
        <formula>if(len(substitute(SUBSTITUTE( SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Fax, &quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;), &quot;-&quot;,&quot;&quot;) ,&quot;.&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;))=10,&quot;1&quot;&amp;substitute(SUBSTITUTE( SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Fax, &quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;), &quot;-&quot;,&quot;&quot;) ,&quot;.&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;)&amp;&quot;@efaxsend.com&quot;,&quot;Not Provided&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Fax Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Journey__c</fullName>
        <formula>HYPERLINK(&quot;https://quote.rapidadvance.com?stepname=WelcomeBack&amp;utm_source=emailremarketing&amp;SfLeadId=&quot;&amp; CASESAFEID(Id),&quot;Customer Journey&quot;)</formula>
        <label>Customer Journey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D2__c</fullName>
        <formula>Scheduled_Follow_Up__c - NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D2subD1</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DL_Handler__c</fullName>
        <formula>HYPERLINK(&quot;https://calc.rapidadvance.com/AutomaticStatements/&quot;&amp; CASESAFEID(Id),Id)</formula>
        <label>DL Handler</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSDocsFirstRoundComplete__c</fullName>
        <label>DMS Docs First Round Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMS_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://tps.rapidadvance.com/LeadDocument/SFLeadDocSummary?sfid=&quot;&amp; CASESAFEID(Id),Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMS Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Upload_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://calc.rapidadvance.com/NewSubmission/CreateDMSTask?sfLeadId=&quot;&amp; CASESAFEID(Id),Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMS Upload Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Marketing_Prescreen_Score__c</fullName>
        <label>DNB Marketing Prescreen Score</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNC_Response__c</fullName>
        <label>DNC Response</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_NOT_FAX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DO NOT FAX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateBusinessStarted__c</fullName>
        <label>Business Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Principal 1 Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Escalation__c</fullName>
        <description>Date Lead was Escalated</description>
        <label>Date of Escalation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DealOwner_Group__c</fullName>
        <label>DealOwner Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>